--- a/ConsultasApp.Api/ConsultasApp.Api.csproj
+++ b/ConsultasApp.Api/ConsultasApp.Api.csproj
@@ -8,6 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ConsultasApp.Application\ConsultasApp.Application.csproj" />
+    <ProjectReference Include="..\ConsultasApp.Domain\ConsultasApp.Domain.csproj" />
+    <ProjectReference Include="..\ConsultasApp.Infra.Data\ConsultasApp.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
