--- a/ConsultasApp.Api/appsettings.Development.json
+++ b/ConsultasApp.Api/appsettings.Development.json
@@ -1,8 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  /* Mapeamento da connectionstring do banco de dados */
+  "ConnectionStrings": {
+    "DBO_CONSULTASAPP": "Data Source=localhost,1434;Initial Catalog=DBO_CONSULTASAPP;User ID=sa;Password=Coti@2025;Encrypt=False"
   }
 }
